# jp2_remediator

./: .flake8  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-main.yml  build-prod.yml  build-trial.yml  pytest.yml  test.yml
src/jp2_remediator/: box_reader.py  in_memory_box_reader.py  jp2_result.py  main.py  processor.py
src/jp2_remediator/tests/unit/: test_box_reader.py  test_in_memory_box_reader.py  test_jp2_result.py  test_processor.py
