[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jp2_remediator"
version = "1.0.0"
description = "A module to validate jp2images"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kim Pham", email = "kimpham54@gmail.com" },
    ]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.35.39",
    "botocore>=1.35.39",
    "flake8>=7.3.0",
    "jmespath==1.0.1",
    "jpylyzer==2.2.1",
    "mccabe==0.7.0",
    "project-paths==1.1.1",
    "pycodestyle>=2.12.1",
    "pyflakes>=3.2.0",
    "python-dateutil==2.9.0.post0",
    "s3transfer==0.10.3",
    "setuptools==73.0.1",
    "six==1.16.0",
    "toml==0.10.2",
    "urllib3==2.2.3",
]

[project.urls]
Homepage = "https://github.com/harvard-lts/jp2_remediator"
Issues = "https://github.com/harvard-lts/jp2_remediator/issues"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]

[tool.coverage.run]
omit = [
  "**/tests/*"
]

[tool.project-paths]
dir_unit_out = "src/jp2_remediator/tests/out/"
dir_unit_resources = "src/jp2_remediator/tests/resources/"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
